Update ManagerUI.java